squash home screen mobile bugs

--- a/css/ceno.css
+++ b/css/ceno.css
@@ -72,3 +72,7 @@ body {
     display: grid;
     place-content: center;
 }
+
+.relpos {
+    position: relative;
+}
